PA 2/src/cool.output
Terminals unused in grammar

    ERROR


Grammar

    0 $accept: program $end

    1 program: class_list

    2 class_list: class
    3           | class_list class

    4 class: CLASS TYPEID '{' feature_list '}' ';'
    5      | CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';'
    6      | error ';'

    7 feature_list: %empty
    8             | feature_list feature

    9 feature: OBJECTID '(' formal_list ')' ':' TYPEID '{' expr '}' ';'
   10        | OBJECTID ':' TYPEID op_assign ';'
   11        | error ';'

   12 formal_list: %empty
   13            | formal
   14            | formal_list ',' formal

   15 formal: OBJECTID ':' TYPEID
   16       | error formal

   17 expr_list: %empty
   18          | expr
   19          | expr_list ',' expr

   20 expr_block: expr ';'
   21           | expr_block expr ';'
   22           | error ';'

   23 expr: OBJECTID ASSIGN expr
   24     | dispatch_expr
   25     | IF expr THEN expr ELSE expr FI
   26     | WHILE expr LOOP expr POOL
   27     | '{' expr_block '}'
   28     | LET let_expr
   29     | case_expr
   30     | NEW TYPEID
   31     | ISVOID expr
   32     | expr '+' expr
   33     | expr '-' expr
   34     | expr '*' expr
   35     | expr '/' expr
   36     | '~' expr
   37     | expr '<' expr
   38     | expr LE expr
   39     | expr '=' expr
   40     | NOT expr
   41     | '(' expr ')'
   42     | OBJECTID
   43     | INT_CONST
   44     | STR_CONST
   45     | BOOL_CONST

   46 dispatch_expr: expr '.' OBJECTID '(' expr_list ')'
   47              | expr '@' TYPEID '.' OBJECTID '(' expr_list ')'
   48              | OBJECTID '(' expr_list ')'

   49 case_expr: CASE expr OF case_branches ESAC

   50 case_branches: case_branch
   51              | case_branches case_branch

   52 case_branch: OBJECTID ':' TYPEID DARROW expr ';'
   53            | error case_branch

   54 let_expr: OBJECTID ':' TYPEID op_assign IN expr
   55         | OBJECTID ':' TYPEID op_assign ',' let_expr
   56         | error IN expr
   57         | error ',' let_expr

   58 op_assign: %empty
   59          | ASSIGN expr
   60          | error


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 9 41 46 47 48
    ')' (41) 9 41 46 47 48
    '*' (42) 34
    '+' (43) 32
    ',' (44) 14 19 55 57
    '-' (45) 33
    '.' (46) 46 47
    '/' (47) 35
    ':' (58) 9 10 15 52 54 55
    ';' (59) 4 5 6 9 10 11 20 21 22 52
    '<' (60) 37
    '=' (61) 39
    '@' (64) 47
    '{' (123) 4 5 9 27
    '}' (125) 4 5 9 27
    '~' (126) 36
    error (256) 6 11 16 22 53 56 57 60
    CLASS (258) 4 5
    ELSE (259) 25
    FI (260) 25
    IF (261) 25
    IN (262) 54 56
    INHERITS (263) 5
    LET (264) 28
    LOOP (265) 26
    POOL (266) 26
    THEN (267) 25
    WHILE (268) 26
    CASE (269) 49
    ESAC (270) 49
    OF (271) 49
    DARROW (272) 52
    NEW (273) 30
    ISVOID (274) 31
    STR_CONST <symbol> (275) 44
    INT_CONST <symbol> (276) 43
    BOOL_CONST <boolean> (277) 45
    TYPEID <symbol> (278) 4 5 9 10 15 30 47 52 54 55
    OBJECTID <symbol> (279) 9 10 15 23 42 46 47 48 52 54 55
    ASSIGN (280) 23 59
    NOT (281) 40
    LE (282) 38
    ERROR (283)
    FLAG (285)


Nonterminals, with rules where they appear

    $accept (46)
        on left: 0
    program <program> (47)
        on left: 1
        on right: 0
    class_list <classes> (48)
        on left: 2 3
        on right: 1 3
    class <class_> (49)
        on left: 4 5 6
        on right: 2 3
    feature_list <features> (50)
        on left: 7 8
        on right: 4 5 8
    feature <feature> (51)
        on left: 9 10 11
        on right: 8
    formal_list <formals> (52)
        on left: 12 13 14
        on right: 9 14
    formal <formal> (53)
        on left: 15 16
        on right: 13 14 16
    expr_list <expressions> (54)
        on left: 17 18 19
        on right: 19 46 47 48
    expr_block <expressions> (55)
        on left: 20 21 22
        on right: 21 27
    expr <expression> (56)
        on left: 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45
        on right: 9 18 19 20 21 23 25 26 31 32 33 34 35 36 37 38 39 40 41 46 47 49 52 54 56 59
    dispatch_expr <expression> (57)
        on left: 46 47 48
        on right: 24
    case_expr <expression> (58)
        on left: 49
        on right: 29
    case_branches <cases> (59)
        on left: 50 51
        on right: 49 51
    case_branch <case_> (60)
        on left: 52 53
        on right: 50 51 53
    let_expr <expression> (61)
        on left: 54 55 56 57
        on right: 28 55 57
    op_assign <expression> (62)
        on left: 58 59 60
        on right: 10 54 55


State 0

    0 $accept: . program $end

    error  shift, and go to state 1
    CLASS  shift, and go to state 2

    program     go to state 3
    class_list  go to state 4
    class       go to state 5


State 1

    6 class: error . ';'

    ';'  shift, and go to state 6


State 2

    4 class: CLASS . TYPEID '{' feature_list '}' ';'
    5      | CLASS . TYPEID INHERITS TYPEID '{' feature_list '}' ';'

    TYPEID  shift, and go to state 7


State 3

    0 $accept: program . $end

    $end  shift, and go to state 8


State 4

    1 program: class_list .
    3 class_list: class_list . class

    error  shift, and go to state 1
    CLASS  shift, and go to state 2

    $end  reduce using rule 1 (program)

    class  go to state 9


State 5

    2 class_list: class .

    $default  reduce using rule 2 (class_list)


State 6

    6 class: error ';' .

    $default  reduce using rule 6 (class)


State 7

    4 class: CLASS TYPEID . '{' feature_list '}' ';'
    5      | CLASS TYPEID . INHERITS TYPEID '{' feature_list '}' ';'

    INHERITS  shift, and go to state 10
    '{'       shift, and go to state 11


State 8

    0 $accept: program $end .

    $default  accept


State 9

    3 class_list: class_list class .

    $default  reduce using rule 3 (class_list)


State 10

    5 class: CLASS TYPEID INHERITS . TYPEID '{' feature_list '}' ';'

    TYPEID  shift, and go to state 12


State 11

    4 class: CLASS TYPEID '{' . feature_list '}' ';'

    $default  reduce using rule 7 (feature_list)

    feature_list  go to state 13


State 12

    5 class: CLASS TYPEID INHERITS TYPEID . '{' feature_list '}' ';'

    '{'  shift, and go to state 14


State 13

    4 class: CLASS TYPEID '{' feature_list . '}' ';'
    8 feature_list: feature_list . feature

    error     shift, and go to state 15
    OBJECTID  shift, and go to state 16
    '}'       shift, and go to state 17

    feature  go to state 18


State 14

    5 class: CLASS TYPEID INHERITS TYPEID '{' . feature_list '}' ';'

    $default  reduce using rule 7 (feature_list)

    feature_list  go to state 19


State 15

   11 feature: error . ';'

    ';'  shift, and go to state 20


State 16

    9 feature: OBJECTID . '(' formal_list ')' ':' TYPEID '{' expr '}' ';'
   10        | OBJECTID . ':' TYPEID op_assign ';'

    '('  shift, and go to state 21
    ':'  shift, and go to state 22


State 17

    4 class: CLASS TYPEID '{' feature_list '}' . ';'

    ';'  shift, and go to state 23


State 18

    8 feature_list: feature_list feature .

    $default  reduce using rule 8 (feature_list)


State 19

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list . '}' ';'
    8 feature_list: feature_list . feature

    error     shift, and go to state 15
    OBJECTID  shift, and go to state 16
    '}'       shift, and go to state 24

    feature  go to state 18


State 20

   11 feature: error ';' .

    $default  reduce using rule 11 (feature)


State 21

    9 feature: OBJECTID '(' . formal_list ')' ':' TYPEID '{' expr '}' ';'

    error     shift, and go to state 25
    OBJECTID  shift, and go to state 26

    ')'  reduce using rule 12 (formal_list)
    ','  reduce using rule 12 (formal_list)

    formal_list  go to state 27
    formal       go to state 28


State 22

   10 feature: OBJECTID ':' . TYPEID op_assign ';'

    TYPEID  shift, and go to state 29


State 23

    4 class: CLASS TYPEID '{' feature_list '}' ';' .

    $default  reduce using rule 4 (class)


State 24

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' . ';'

    ';'  shift, and go to state 30


State 25

   16 formal: error . formal

    error     shift, and go to state 25
    OBJECTID  shift, and go to state 26

    formal  go to state 31


State 26

   15 formal: OBJECTID . ':' TYPEID

    ':'  shift, and go to state 32


State 27

    9 feature: OBJECTID '(' formal_list . ')' ':' TYPEID '{' expr '}' ';'
   14 formal_list: formal_list . ',' formal

    ')'  shift, and go to state 33
    ','  shift, and go to state 34


State 28

   13 formal_list: formal .

    $default  reduce using rule 13 (formal_list)


State 29

   10 feature: OBJECTID ':' TYPEID . op_assign ';'

    error   shift, and go to state 35
    ASSIGN  shift, and go to state 36

    ';'  reduce using rule 58 (op_assign)

    op_assign  go to state 37


State 30

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';' .

    $default  reduce using rule 5 (class)


State 31

   16 formal: error formal .

    $default  reduce using rule 16 (formal)


State 32

   15 formal: OBJECTID ':' . TYPEID

    TYPEID  shift, and go to state 38


State 33

    9 feature: OBJECTID '(' formal_list ')' . ':' TYPEID '{' expr '}' ';'

    ':'  shift, and go to state 39


State 34

   14 formal_list: formal_list ',' . formal

    error     shift, and go to state 25
    OBJECTID  shift, and go to state 26

    formal  go to state 40


State 35

   60 op_assign: error .

    $default  reduce using rule 60 (op_assign)


State 36

   59 op_assign: ASSIGN . expr

    IF          shift, and go to state 41
    LET         shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    NEW         shift, and go to state 45
    ISVOID      shift, and go to state 46
    STR_CONST   shift, and go to state 47
    INT_CONST   shift, and go to state 48
    BOOL_CONST  shift, and go to state 49
    OBJECTID    shift, and go to state 50
    NOT         shift, and go to state 51
    '~'         shift, and go to state 52
    '{'         shift, and go to state 53
    '('         shift, and go to state 54

    expr           go to state 55
    dispatch_expr  go to state 56
    case_expr      go to state 57


State 37

   10 feature: OBJECTID ':' TYPEID op_assign . ';'

    ';'  shift, and go to state 58


State 38

   15 formal: OBJECTID ':' TYPEID .

    $default  reduce using rule 15 (formal)


State 39

    9 feature: OBJECTID '(' formal_list ')' ':' . TYPEID '{' expr '}' ';'

    TYPEID  shift, and go to state 59


State 40

   14 formal_list: formal_list ',' formal .

    $default  reduce using rule 14 (formal_list)


State 41

   25 expr: IF . expr THEN expr ELSE expr FI

    IF          shift, and go to state 41
    LET         shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    NEW         shift, and go to state 45
    ISVOID      shift, and go to state 46
    STR_CONST   shift, and go to state 47
    INT_CONST   shift, and go to state 48
    BOOL_CONST  shift, and go to state 49
    OBJECTID    shift, and go to state 50
    NOT         shift, and go to state 51
    '~'         shift, and go to state 52
    '{'         shift, and go to state 53
    '('         shift, and go to state 54

    expr           go to state 60
    dispatch_expr  go to state 56
    case_expr      go to state 57


State 42

   28 expr: LET . let_expr

    error     shift, and go to state 61
    OBJECTID  shift, and go to state 62

    let_expr  go to state 63


State 43

   26 expr: WHILE . expr LOOP expr POOL

    IF          shift, and go to state 41
    LET         shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    NEW         shift, and go to state 45
    ISVOID      shift, and go to state 46
    STR_CONST   shift, and go to state 47
    INT_CONST   shift, and go to state 48
    BOOL_CONST  shift, and go to state 49
    OBJECTID    shift, and go to state 50
    NOT         shift, and go to state 51
    '~'         shift, and go to state 52
    '{'         shift, and go to state 53
    '('         shift, and go to state 54

    expr           go to state 64
    dispatch_expr  go to state 56
    case_expr      go to state 57


State 44

   49 case_expr: CASE . expr OF case_branches ESAC

    IF          shift, and go to state 41
    LET         shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    NEW         shift, and go to state 45
    ISVOID      shift, and go to state 46
    STR_CONST   shift, and go to state 47
    INT_CONST   shift, and go to state 48
    BOOL_CONST  shift, and go to state 49
    OBJECTID    shift, and go to state 50
    NOT         shift, and go to state 51
    '~'         shift, and go to state 52
    '{'         shift, and go to state 53
    '('         shift, and go to state 54

    expr           go to state 65
    dispatch_expr  go to state 56
    case_expr      go to state 57


State 45

   30 expr: NEW . TYPEID

    TYPEID  shift, and go to state 66


State 46

   31 expr: ISVOID . expr

    IF          shift, and go to state 41
    LET         shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    NEW         shift, and go to state 45
    ISVOID      shift, and go to state 46
    STR_CONST   shift, and go to state 47
    INT_CONST   shift, and go to state 48
    BOOL_CONST  shift, and go to state 49
    OBJECTID    shift, and go to state 50
    NOT         shift, and go to state 51
    '~'         shift, and go to state 52
    '{'         shift, and go to state 53
    '('         shift, and go to state 54

    expr           go to state 67
    dispatch_expr  go to state 56
    case_expr      go to state 57


State 47

   44 expr: STR_CONST .

    $default  reduce using rule 44 (expr)


State 48

   43 expr: INT_CONST .

    $default  reduce using rule 43 (expr)


State 49

   45 expr: BOOL_CONST .

    $default  reduce using rule 45 (expr)


State 50

   23 expr: OBJECTID . ASSIGN expr
   42     | OBJECTID .
   48 dispatch_expr: OBJECTID . '(' expr_list ')'

    ASSIGN  shift, and go to state 68
    '('     shift, and go to state 69

    $default  reduce using rule 42 (expr)


State 51

   40 expr: NOT . expr

    IF          shift, and go to state 41
    LET         shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    NEW         shift, and go to state 45
    ISVOID      shift, and go to state 46
    STR_CONST   shift, and go to state 47
    INT_CONST   shift, and go to state 48
    BOOL_CONST  shift, and go to state 49
    OBJECTID    shift, and go to state 50
    NOT         shift, and go to state 51
    '~'         shift, and go to state 52
    '{'         shift, and go to state 53
    '('         shift, and go to state 54

    expr           go to state 70
    dispatch_expr  go to state 56
    case_expr      go to state 57


State 52

   36 expr: '~' . expr

    IF          shift, and go to state 41
    LET         shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    NEW         shift, and go to state 45
    ISVOID      shift, and go to state 46
    STR_CONST   shift, and go to state 47
    INT_CONST   shift, and go to state 48
    BOOL_CONST  shift, and go to state 49
    OBJECTID    shift, and go to state 50
    NOT         shift, and go to state 51
    '~'         shift, and go to state 52
    '{'         shift, and go to state 53
    '('         shift, and go to state 54

    expr           go to state 71
    dispatch_expr  go to state 56
    case_expr      go to state 57


State 53

   27 expr: '{' . expr_block '}'

    error       shift, and go to state 72
    IF          shift, and go to state 41
    LET         shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    NEW         shift, and go to state 45
    ISVOID      shift, and go to state 46
    STR_CONST   shift, and go to state 47
    INT_CONST   shift, and go to state 48
    BOOL_CONST  shift, and go to state 49
    OBJECTID    shift, and go to state 50
    NOT         shift, and go to state 51
    '~'         shift, and go to state 52
    '{'         shift, and go to state 53
    '('         shift, and go to state 54

    expr_block     go to state 73
    expr           go to state 74
    dispatch_expr  go to state 56
    case_expr      go to state 57


State 54

   41 expr: '(' . expr ')'

    IF          shift, and go to state 41
    LET         shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    NEW         shift, and go to state 45
    ISVOID      shift, and go to state 46
    STR_CONST   shift, and go to state 47
    INT_CONST   shift, and go to state 48
    BOOL_CONST  shift, and go to state 49
    OBJECTID    shift, and go to state 50
    NOT         shift, and go to state 51
    '~'         shift, and go to state 52
    '{'         shift, and go to state 53
    '('         shift, and go to state 54

    expr           go to state 75
    dispatch_expr  go to state 56
    case_expr      go to state 57


State 55

   32 expr: expr . '+' expr
   33     | expr . '-' expr
   34     | expr . '*' expr
   35     | expr . '/' expr
   37     | expr . '<' expr
   38     | expr . LE expr
   39     | expr . '=' expr
   46 dispatch_expr: expr . '.' OBJECTID '(' expr_list ')'
   47              | expr . '@' TYPEID '.' OBJECTID '(' expr_list ')'
   59 op_assign: ASSIGN expr .

    LE   shift, and go to state 76
    '<'  shift, and go to state 77
    '='  shift, and go to state 78
    '+'  shift, and go to state 79
    '-'  shift, and go to state 80
    '*'  shift, and go to state 81
    '/'  shift, and go to state 82
    '@'  shift, and go to state 83
    '.'  shift, and go to state 84

    $default  reduce using rule 59 (op_assign)


State 56

   24 expr: dispatch_expr .

    $default  reduce using rule 24 (expr)


State 57

   29 expr: case_expr .

    $default  reduce using rule 29 (expr)


State 58

   10 feature: OBJECTID ':' TYPEID op_assign ';' .

    $default  reduce using rule 10 (feature)


State 59

    9 feature: OBJECTID '(' formal_list ')' ':' TYPEID . '{' expr '}' ';'

    '{'  shift, and go to state 85


State 60

   25 expr: IF expr . THEN expr ELSE expr FI
   32     | expr . '+' expr
   33     | expr . '-' expr
   34     | expr . '*' expr
   35     | expr . '/' expr
   37     | expr . '<' expr
   38     | expr . LE expr
   39     | expr . '=' expr
   46 dispatch_expr: expr . '.' OBJECTID '(' expr_list ')'
   47              | expr . '@' TYPEID '.' OBJECTID '(' expr_list ')'

    THEN  shift, and go to state 86
    LE    shift, and go to state 76
    '<'   shift, and go to state 77
    '='   shift, and go to state 78
    '+'   shift, and go to state 79
    '-'   shift, and go to state 80
    '*'   shift, and go to state 81
    '/'   shift, and go to state 82
    '@'   shift, and go to state 83
    '.'   shift, and go to state 84


State 61

   56 let_expr: error . IN expr
   57         | error . ',' let_expr

    IN   shift, and go to state 87
    ','  shift, and go to state 88


State 62

   54 let_expr: OBJECTID . ':' TYPEID op_assign IN expr
   55         | OBJECTID . ':' TYPEID op_assign ',' let_expr

    ':'  shift, and go to state 89


State 63

   28 expr: LET let_expr .

    $default  reduce using rule 28 (expr)


State 64

   26 expr: WHILE expr . LOOP expr POOL
   32     | expr . '+' expr
   33     | expr . '-' expr
   34     | expr . '*' expr
   35     | expr . '/' expr
   37     | expr . '<' expr
   38     | expr . LE expr
   39     | expr . '=' expr
   46 dispatch_expr: expr . '.' OBJECTID '(' expr_list ')'
   47              | expr . '@' TYPEID '.' OBJECTID '(' expr_list ')'

    LOOP  shift, and go to state 90
    LE    shift, and go to state 76
    '<'   shift, and go to state 77
    '='   shift, and go to state 78
    '+'   shift, and go to state 79
    '-'   shift, and go to state 80
    '*'   shift, and go to state 81
    '/'   shift, and go to state 82
    '@'   shift, and go to state 83
    '.'   shift, and go to state 84


State 65

   32 expr: expr . '+' expr
   33     | expr . '-' expr
   34     | expr . '*' expr
   35     | expr . '/' expr
   37     | expr . '<' expr
   38     | expr . LE expr
   39     | expr . '=' expr
   46 dispatch_expr: expr . '.' OBJECTID '(' expr_list ')'
   47              | expr . '@' TYPEID '.' OBJECTID '(' expr_list ')'
   49 case_expr: CASE expr . OF case_branches ESAC

    OF   shift, and go to state 91
    LE   shift, and go to state 76
    '<'  shift, and go to state 77
    '='  shift, and go to state 78
    '+'  shift, and go to state 79
    '-'  shift, and go to state 80
    '*'  shift, and go to state 81
    '/'  shift, and go to state 82
    '@'  shift, and go to state 83
    '.'  shift, and go to state 84


State 66

   30 expr: NEW TYPEID .

    $default  reduce using rule 30 (expr)


State 67

   31 expr: ISVOID expr .
   32     | expr . '+' expr
   33     | expr . '-' expr
   34     | expr . '*' expr
   35     | expr . '/' expr
   37     | expr . '<' expr
   38     | expr . LE expr
   39     | expr . '=' expr
   46 dispatch_expr: expr . '.' OBJECTID '(' expr_list ')'
   47              | expr . '@' TYPEID '.' OBJECTID '(' expr_list ')'

    '@'  shift, and go to state 83
    '.'  shift, and go to state 84

    $default  reduce using rule 31 (expr)


State 68

   23 expr: OBJECTID ASSIGN . expr

    IF          shift, and go to state 41
    LET         shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    NEW         shift, and go to state 45
    ISVOID      shift, and go to state 46
    STR_CONST   shift, and go to state 47
    INT_CONST   shift, and go to state 48
    BOOL_CONST  shift, and go to state 49
    OBJECTID    shift, and go to state 50
    NOT         shift, and go to state 51
    '~'         shift, and go to state 52
    '{'         shift, and go to state 53
    '('         shift, and go to state 54

    expr           go to state 92
    dispatch_expr  go to state 56
    case_expr      go to state 57


State 69

   48 dispatch_expr: OBJECTID '(' . expr_list ')'

    IF          shift, and go to state 41
    LET         shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    NEW         shift, and go to state 45
    ISVOID      shift, and go to state 46
    STR_CONST   shift, and go to state 47
    INT_CONST   shift, and go to state 48
    BOOL_CONST  shift, and go to state 49
    OBJECTID    shift, and go to state 50
    NOT         shift, and go to state 51
    '~'         shift, and go to state 52
    '{'         shift, and go to state 53
    '('         shift, and go to state 54

    $default  reduce using rule 17 (expr_list)

    expr_list      go to state 93
    expr           go to state 94
    dispatch_expr  go to state 56
    case_expr      go to state 57


State 70

   32 expr: expr . '+' expr
   33     | expr . '-' expr
   34     | expr . '*' expr
   35     | expr . '/' expr
   37     | expr . '<' expr
   38     | expr . LE expr
   39     | expr . '=' expr
   40     | NOT expr .
   46 dispatch_expr: expr . '.' OBJECTID '(' expr_list ')'
   47              | expr . '@' TYPEID '.' OBJECTID '(' expr_list ')'

    LE   shift, and go to state 76
    '<'  shift, and go to state 77
    '='  shift, and go to state 78
    '+'  shift, and go to state 79
    '-'  shift, and go to state 80
    '*'  shift, and go to state 81
    '/'  shift, and go to state 82
    '@'  shift, and go to state 83
    '.'  shift, and go to state 84

    $default  reduce using rule 40 (expr)


State 71

   32 expr: expr . '+' expr
   33     | expr . '-' expr
   34     | expr . '*' expr
   35     | expr . '/' expr
   36     | '~' expr .
   37     | expr . '<' expr
   38     | expr . LE expr
   39     | expr . '=' expr
   46 dispatch_expr: expr . '.' OBJECTID '(' expr_list ')'
   47              | expr . '@' TYPEID '.' OBJECTID '(' expr_list ')'

    '@'  shift, and go to state 83
    '.'  shift, and go to state 84

    $default  reduce using rule 36 (expr)


State 72

   22 expr_block: error . ';'

    ';'  shift, and go to state 95


State 73

   21 expr_block: expr_block . expr ';'
   27 expr: '{' expr_block . '}'

    IF          shift, and go to state 41
    LET         shift, and go to state 42
    WHILE       shift, and go to state 43
    CASE        shift, and go to state 44
    NEW         shift, and go to state 45
    ISVOID      shift, and go to state 46
    STR_CONST   shift, and go to state 47
    INT_CONST   shift, and go to state 48
    BOOL_CONST  shift, and go to state 49
    OBJECTID    shift, and go to state 50
    NOT         shift, and go to state 51
    '~'         shift, and go to state 52
    '{'         shift, and go to state 53
    '}'         shift, and go to state 96
    '('         shift, and go to state 54

    expr           go to state 97
    dispatch_expr  go to state 56
    case_expr      go to state 57


State 74

   20 expr_block: expr . ';'
   32 expr: expr . '+' expr
   33     | expr . '-' expr
   34     | expr . '*' expr
   35     | expr . '/' expr
   37     | expr . '<' expr
   38     | expr . LE expr
   39     | expr . '=' expr
   46 dispatch_expr: expr . '.' OBJECTID '(' expr_list ')'
   47              | expr . '@' TYPEID '.' OBJECTID '(' expr_list ')'

    LE   shift, and go to state 76
    '<'  shift, and go to state 77
    '='  shift, and go to state 78
    '+'  shift, and go to state 79
    '-'  shift, and go to state 80
    '*'  shift, and go to state 81
    '/'  shift, and go to state 82
    '@'  shift, and go to state 83
    '.'  shift, and go to state 84
    ';'  shift, and go to state 98


State 75
